--- a/BJD/bin/Option.ini
+++ b/BJD/bin/Option.ini
@@ -27,3 +27,15 @@ INT=LoglinesDelete=1000
 RADIO=LogisDisplay=1
 STRING=LogCharacter=
 BOOL=LoguseLimitString=false
+BOOL=SampleuseServer=false
+LIST=SampleprotocolKind=0
+INT=Sampleport=9999
+BINDADDR=SamplebindAddress2=V4ONLY,INADDR_ANY,IN6ADDR_ANY_INIT
+BOOL=SampleuseResolve=false
+BOOL=SampleuseDetailsLog=true
+INT=Samplemultiple=10
+INT=SampletimeOut=30
+STRING=SamplesampleText=Sample Server
+RADIO=SampleenableAcl=0
+STRING=SampleaclName=
+STRING=SampleaclAddress=
