--- a/BJD/build.xml
+++ b/BJD/build.xml
@@ -52,6 +52,7 @@
 		    <fileset dir="${dev}/BJD/bin/plugins"/>
 		</copy>
 		
+	
 		<!-- 【Test再構築】-->
 		<property  name="junit.jar" value="C:\eclipse_juno_java\eclipse\plugins\org.junit_4.10.0.v4_10_0_v20120426-0900\junit.jar"/>
 		<property  name="hamcrest.jar" value="C:\eclipse_juno_java\eclipse\plugins\org.hamcrest.core_1.1.0.v20090501071000.jar"/>
@@ -66,5 +67,9 @@
 			</classpath>
 	  	</javac>
 		
+		<!--【Option.defのコピー】-->
+		<copy file="${dev}/Option.def" tofile="${project}/bin/Option.def"/>
+		<copy file="${dev}/Option.def" tofile="${out}/Option.def"/>
+
 	</target>
 </project>
