--- a/BJD/testData/FtpServerTest.ini
+++ b/BJD/testData/FtpServerTest.ini
@@ -3,7 +3,7 @@ BOOL=BasicuseLastSize=true
 BOOL=BasicisWindowOpen=true
 BOOL=BasicuseAdminPassword=false
 HIDE_STRING=Basicpassword=60392a0d922b9077
-STRING=BasicserverName=localhost
+STRING=BasicserverName=
 BOOL=BasiceditBrowse=false
 LIST=Basiclang=0
 LIST=BasicprotocolKind=0
@@ -18,7 +18,7 @@ STRING=BasicaclName=
 STRING=BasicaclAddress=
 LIST=LognormalLogKind=2
 LIST=LogsecureLogKind=2
-FOLDER=LogsaveDirectory=%ExecutablePath%
+FOLDER=LogsaveDirectory=
 BOOL=LoguseLogFile=true
 BOOL=LoguseLogClear=false
 INT=LogsaveDays=31
@@ -35,30 +35,20 @@ BOOL=FtpuseResolve=false
 BOOL=FtpuseDetailsLog=true
 INT=Ftpmultiple=10
 INT=FtptimeOut=60
-STRING=FtpbannerMessage=FTP ( $p Version $v ) ready
-BOOL=FtpuseSyst=false
-<<<<<<< HEAD:out/Option.ini
-=======
-INT=FtpreservationTime=5000
->>>>>>> work:out/Option.ini
+STRING=FtpbannerMessage=FTP ( $p Version TEST ) ready
+BOOL=FtpuseSyst=true
+INT=FtpreservationTime=1
 FOLDER=FtpfromFolder=
 FOLDER=FtptoFolder=
 LIST=FtpaccessControl=0
 FOLDER=FtphomeDirectory=
 STRING=FtpuserName=
 HIDE_STRING=Ftppassword=60392a0d922b9077
-<<<<<<< HEAD:out/Option.ini
-RADIO=FtpenableAcl=0
-STRING=FtpaclName=
-STRING=FtpaclAddress=
-BOOL=SampleuseServer=true
-=======
-DAT=Ftpuser=	0	C:\dev	user1	91ad2bfdda0b408f
+DAT=Ftpuser=	0	C:\dev\bjd6\work\FtpTestDir	user1	91ad2bfdda0b408f	2	C:\dev\bjd6\work\FtpTestDir	user2	b867684066caf9dc	1	C:\dev\bjd6\work\FtpTestDir	user3	4911d0d49c8911ed	0	C:\dev\bjd6\work\FtpTestDir	Anonymous	529bc0b2695c861e
 RADIO=FtpenableAcl=1
 STRING=FtpaclName=
 STRING=FtpaclAddress=
 BOOL=SampleuseServer=false
->>>>>>> work:out/Option.ini
 LIST=SampleprotocolKind=0
 INT=Sampleport=9999
 BINDADDR=SamplebindAddress2=V4ONLY,INADDR_ANY,IN6ADDR_ANY_INIT
@@ -66,7 +56,7 @@ BOOL=SampleuseResolve=false
 BOOL=SampleuseDetailsLog=true
 INT=Samplemultiple=10
 INT=SampletimeOut=30
-STRING=SamplesampleText=Sample Server123
+STRING=SamplesampleText=Sample Server
 RADIO=SampleenableAcl=0
 STRING=SampleaclName=
 STRING=SampleaclAddress=
