--- a/BJD/bin/Option.ini
+++ b/BJD/bin/Option.ini
@@ -2,8 +2,8 @@ BOOL=BasicuseExitDlg=false
 BOOL=BasicuseLastSize=true
 BOOL=BasicisWindowOpen=true
 BOOL=BasicuseAdminPassword=false
-HIDE_STRING=Basicpassword=***
-STRING=BasicserverName=localhost
+HIDE_STRING=Basicpassword=60392a0d922b9077
+STRING=BasicserverName=
 BOOL=BasiceditBrowse=false
 LIST=Basiclang=0
 LIST=BasicprotocolKind=0
@@ -18,7 +18,7 @@ STRING=BasicaclName=
 STRING=BasicaclAddress=
 LIST=LognormalLogKind=2
 LIST=LogsecureLogKind=2
-FOLDER=LogsaveDirectory=%ExecutablePath%
+FOLDER=LogsaveDirectory=
 BOOL=LoguseLogFile=true
 BOOL=LoguseLogClear=false
 INT=LogsaveDays=31
@@ -43,8 +43,8 @@ FOLDER=FtptoFolder=
 LIST=FtpaccessControl=0
 FOLDER=FtphomeDirectory=
 STRING=FtpuserName=
-HIDE_STRING=Ftppassword=***
-DAT=Ftpuser=	0	C:\dev	user1	***
+HIDE_STRING=Ftppassword=60392a0d922b9077
+DAT=Ftpuser=	0	C:\dev	user1	91ad2bfdda0b408f
 RADIO=FtpenableAcl=1
 STRING=FtpaclName=
 STRING=FtpaclAddress=
