--- a/BJD/bin/Option.ini
+++ b/BJD/bin/Option.ini
@@ -27,7 +27,7 @@ INT=LoglinesDelete=1000
 RADIO=LogisDisplay=1
 STRING=LogCharacter=
 BOOL=LoguseLimitString=false
-BOOL=FtpuseServer=true
+BOOL=FtpuseServer=false
 LIST=FtpprotocolKind=0
 INT=Ftpport=21
 BINDADDR=FtpbindAddress2=V4ONLY,INADDR_ANY,IN6ADDR_ANY_INIT
@@ -44,8 +44,7 @@ LIST=FtpaccessControl=0
 FOLDER=FtphomeDirectory=
 STRING=FtpuserName=
 HIDE_STRING=Ftppassword=60392a0d922b9077
-DAT=Ftpuser=	0	C:\dev	user1	91ad2bfdda0b408f
-RADIO=FtpenableAcl=1
+RADIO=FtpenableAcl=0
 STRING=FtpaclName=
 STRING=FtpaclAddress=
 BOOL=SampleuseServer=false
