--- a/BJD/bin/Option.ini
+++ b/BJD/bin/Option.ini
@@ -27,7 +27,7 @@ INT=LoglinesDelete=1000
 RADIO=LogisDisplay=1
 STRING=LogCharacter=
 BOOL=LoguseLimitString=false
-BOOL=FtpuseServer=false
+BOOL=FtpuseServer=true
 LIST=FtpprotocolKind=0
 INT=Ftpport=21
 BINDADDR=FtpbindAddress2=V4ONLY,INADDR_ANY,IN6ADDR_ANY_INIT
@@ -35,16 +35,17 @@ BOOL=FtpuseResolve=false
 BOOL=FtpuseDetailsLog=true
 INT=Ftpmultiple=10
 INT=FtptimeOut=60
-STRING=FtpbannerMessage=FTP ( $p Version $v ) ready
-BOOL=FtpuseSyst=false
-INT=FtpreservationTime=5000
+STRING=FtpbannerMessage=FTP ( $p Version TEST ) ready
+BOOL=FtpuseSyst=true
+INT=FtpreservationTime=1
 FOLDER=FtpfromFolder=
 FOLDER=FtptoFolder=
 LIST=FtpaccessControl=0
 FOLDER=FtphomeDirectory=
 STRING=FtpuserName=
 HIDE_STRING=Ftppassword=60392a0d922b9077
-RADIO=FtpenableAcl=0
+DAT=Ftpuser=	0	C:\dev\bjd6\work\FtpTestDir	user1	91ad2bfdda0b408f	2	C:\dev\bjd6\work\FtpTestDir	user2	b867684066caf9dc	1	C:\dev\bjd6\work\FtpTestDir	user3	4911d0d49c8911ed	0	C:\dev\bjd6\work\FtpTestDir	Anonymous	529bc0b2695c861e
+RADIO=FtpenableAcl=1
 STRING=FtpaclName=
 STRING=FtpaclAddress=
 BOOL=SampleuseServer=false
