--- a/FtpServer/bin/FtpServerTest.ini
+++ b/FtpServer/bin/FtpServerTest.ini
@@ -2,7 +2,7 @@ BOOL=BasicuseExitDlg=false
 BOOL=BasicuseLastSize=true
 BOOL=BasicisWindowOpen=true
 BOOL=BasicuseAdminPassword=false
-HIDE_STRING=Basicpassword=***
+HIDE_STRING=Basicpassword=60392a0d922b9077
 STRING=BasicserverName=
 BOOL=BasiceditBrowse=false
 LIST=Basiclang=0
@@ -18,7 +18,7 @@ STRING=BasicaclName=
 STRING=BasicaclAddress=
 LIST=LognormalLogKind=2
 LIST=LogsecureLogKind=2
-FOLDER=LogsaveDirectory=C:\dev
+FOLDER=LogsaveDirectory=
 BOOL=LoguseLogFile=true
 BOOL=LoguseLogClear=false
 INT=LogsaveDays=31
@@ -27,37 +27,6 @@ INT=LoglinesDelete=1000
 RADIO=LogisDisplay=1
 STRING=LogCharacter=
 BOOL=LoguseLimitString=false
-BOOL=DnsuseServer=false
-LIST=DnsprotocolKind=1
-INT=Dnsport=53
-BINDADDR=DnsbindAddress2=V4ONLY,INADDR_ANY,IN6ADDR_ANY_INIT
-BOOL=DnsuseResolve=false
-BOOL=DnsuseDetailsLog=true
-INT=Dnsmultiple=10
-INT=DnstimeOut=10
-STRING=DnsrootCache=named.ca
-BOOL=DnsuseRD=true
-STRING=DnssoaMail=postmaster
-INT=DnssoaSerial=1
-INT=DnssoaRefresh=3600
-INT=DnssoaRetry=300
-INT=DnssoaExpire=0
-INT=DnssoaMinimum=3600
-RADIO=DnsenableAcl=0
-STRING=DnsaclName=
-STRING=DnsaclAddress=
-STRING=DnsDomainname=
-DAT=DnsDomaindomainList=	aaa.com	bbb.com
-LIST=Resource-aaa.comtype=0
-STRING=Resource-aaa.comname=
-STRING=Resource-aaa.comalias=
-STRING=Resource-aaa.comaddress=
-INT=Resource-aaa.compriority=10
-LIST=Resource-bbb.comtype=0
-STRING=Resource-bbb.comname=
-STRING=Resource-bbb.comalias=
-STRING=Resource-bbb.comaddress=
-INT=Resource-bbb.compriority=10
 BOOL=FtpuseServer=true
 LIST=FtpprotocolKind=0
 INT=Ftpport=21
@@ -66,16 +35,17 @@ BOOL=FtpuseResolve=false
 BOOL=FtpuseDetailsLog=true
 INT=Ftpmultiple=10
 INT=FtptimeOut=60
-STRING=FtpbannerMessage=FTP ( $p Version $v ) ready
-BOOL=FtpuseSyst=false
-INT=FtpreservationTime=5000
+STRING=FtpbannerMessage=FTP ( $p Version TEST ) ready
+BOOL=FtpuseSyst=true
+INT=FtpreservationTime=1
 FOLDER=FtpfromFolder=
 FOLDER=FtptoFolder=
 LIST=FtpaccessControl=0
 FOLDER=FtphomeDirectory=
 STRING=FtpuserName=
-HIDE_STRING=Ftppassword=***
-RADIO=FtpenableAcl=0
+HIDE_STRING=Ftppassword=60392a0d922b9077
+DAT=Ftpuser=	0	C:\dev\bjd6\work\FtpTestDir	user1	91ad2bfdda0b408f	2	C:\dev\bjd6\work\FtpTestDir	user2	b867684066caf9dc	1	C:\dev\bjd6\work\FtpTestDir	user3	4911d0d49c8911ed	0	C:\dev\bjd6\work\FtpTestDir	Anonymous	529bc0b2695c861e
+RADIO=FtpenableAcl=1
 STRING=FtpaclName=
 STRING=FtpaclAddress=
 BOOL=SampleuseServer=false
