--- a/BJD/bin/Option.ini
+++ b/BJD/bin/Option.ini
@@ -1,3 +1,9 @@
+LIST=Resource-aaa.comtype=0
+STRING=Resource-aaa.comname=
+STRING=Resource-aaa.comalias=
+STRING=Resource-aaa.comaddress=
+INT=Resource-aaa.compriority=10
+DAT=Resource-aaa.comresourceList=	0	1		123	0	0	1		12	100
 BOOL=BasicuseExitDlg=false
 BOOL=BasicuseLastSize=true
 BOOL=BasicisWindowOpen=true
@@ -27,7 +33,7 @@ INT=LoglinesDelete=1000
 RADIO=LogisDisplay=1
 STRING=LogCharacter=
 BOOL=LoguseLimitString=false
-BOOL=DnsuseServer=false
+BOOL=DnsuseServer=true
 LIST=DnsprotocolKind=1
 INT=Dnsport=53
 BINDADDR=DnsbindAddress2=V4ONLY,INADDR_ANY,IN6ADDR_ANY_INIT
@@ -47,12 +53,7 @@ RADIO=DnsenableAcl=0
 STRING=DnsaclName=
 STRING=DnsaclAddress=
 STRING=DnsDomainname=
-DAT=DnsDomaindomainList=	aaa.com	bbb.com
-LIST=Resource-aaa.comtype=0
-STRING=Resource-aaa.comname=
-STRING=Resource-aaa.comalias=
-STRING=Resource-aaa.comaddress=
-INT=Resource-aaa.compriority=10
+DAT=DnsDomaindomainList=#	aaa.com	bbb.com
 LIST=Resource-bbb.comtype=0
 STRING=Resource-bbb.comname=
 STRING=Resource-bbb.comalias=
