--- a/BJD/bin/Option.ini
+++ b/BJD/bin/Option.ini
@@ -27,3 +27,55 @@ INT=LoglinesDelete=1000
 RADIO=LogisDisplay=1
 STRING=LogCharacter=
 BOOL=LoguseLimitString=false
+BOOL=DnsuseServer=false
+LIST=DnsprotocolKind=1
+INT=Dnsport=53
+BINDADDR=DnsbindAddress2=V4ONLY,INADDR_ANY,IN6ADDR_ANY_INIT
+BOOL=DnsuseResolve=false
+BOOL=DnsuseDetailsLog=true
+INT=Dnsmultiple=10
+INT=DnstimeOut=10
+STRING=DnsrootCache=named.ca
+BOOL=DnsuseRD=true
+STRING=DnssoaMail=postmaster
+INT=DnssoaSerial=1
+INT=DnssoaRefresh=3600
+INT=DnssoaRetry=300
+INT=DnssoaExpire=360000
+INT=DnssoaMinimum=3600
+RADIO=DnsenableAcl=0
+STRING=DnsaclName=
+STRING=DnsaclAddress=
+STRING=DnsDomainname=
+BOOL=FtpuseServer=false
+LIST=FtpprotocolKind=0
+INT=Ftpport=21
+BINDADDR=FtpbindAddress2=V4ONLY,INADDR_ANY,IN6ADDR_ANY_INIT
+BOOL=FtpuseResolve=false
+BOOL=FtpuseDetailsLog=true
+INT=Ftpmultiple=10
+INT=FtptimeOut=60
+STRING=FtpbannerMessage=FTP ( $p Version $v ) ready
+BOOL=FtpuseSyst=false
+INT=FtpreservationTime=5000
+FOLDER=FtpfromFolder=
+FOLDER=FtptoFolder=
+LIST=FtpaccessControl=0
+FOLDER=FtphomeDirectory=
+STRING=FtpuserName=
+HIDE_STRING=Ftppassword=60392a0d922b9077
+RADIO=FtpenableAcl=0
+STRING=FtpaclName=
+STRING=FtpaclAddress=
+BOOL=SampleuseServer=false
+LIST=SampleprotocolKind=0
+INT=Sampleport=9999
+BINDADDR=SamplebindAddress2=V4ONLY,INADDR_ANY,IN6ADDR_ANY_INIT
+BOOL=SampleuseResolve=false
+BOOL=SampleuseDetailsLog=true
+INT=Samplemultiple=10
+INT=SampletimeOut=30
+STRING=SamplesampleText=Sample Server
+RADIO=SampleenableAcl=0
+STRING=SampleaclName=
+STRING=SampleaclAddress=
