--- a/BJD/bin/Option.ini
+++ b/BJD/bin/Option.ini
@@ -18,7 +18,7 @@ STRING=BasicaclName=
 STRING=BasicaclAddress=
 LIST=LognormalLogKind=2
 LIST=LogsecureLogKind=2
-FOLDER=LogsaveDirectory=
+FOLDER=LogsaveDirectory=C:\dev
 BOOL=LoguseLogFile=true
 BOOL=LoguseLogClear=false
 INT=LogsaveDays=31
@@ -27,7 +27,7 @@ INT=LoglinesDelete=1000
 RADIO=LogisDisplay=1
 STRING=LogCharacter=
 BOOL=LoguseLimitString=false
-BOOL=DnsuseServer=false
+BOOL=DnsuseServer=true
 LIST=DnsprotocolKind=1
 INT=Dnsport=53
 BINDADDR=DnsbindAddress2=V4ONLY,INADDR_ANY,IN6ADDR_ANY_INIT
@@ -41,12 +41,19 @@ STRING=DnssoaMail=postmaster
 INT=DnssoaSerial=1
 INT=DnssoaRefresh=3600
 INT=DnssoaRetry=300
-INT=DnssoaExpire=360000
+INT=DnssoaExpire=0
 INT=DnssoaMinimum=3600
-RADIO=DnsenableAcl=0
+RADIO=DnsenableAcl=1
 STRING=DnsaclName=
 STRING=DnsaclAddress=
 STRING=DnsDomainname=
+DAT=DnsDomaindomainList=	aaa.com
+LIST=Resource-aaa.comtype=0
+STRING=Resource-aaa.comname=
+STRING=Resource-aaa.comalias=
+STRING=Resource-aaa.comaddress=
+INT=Resource-aaa.compriority=10
+DAT=Resource-aaa.comresourceList=	0	www		192.168.0.1	0	1	ns		192.168.0.1	0
 BOOL=FtpuseServer=false
 LIST=FtpprotocolKind=0
 INT=Ftpport=21
