--- a/BJD/bin/Option.ini
+++ b/BJD/bin/Option.ini
@@ -27,6 +27,26 @@ INT=LoglinesDelete=1000
 RADIO=LogisDisplay=1
 STRING=LogCharacter=
 BOOL=LoguseLimitString=false
+BOOL=DnsuseServer=false
+LIST=DnsprotocolKind=1
+INT=Dnsport=53
+BINDADDR=DnsbindAddress2=V4ONLY,INADDR_ANY,IN6ADDR_ANY_INIT
+BOOL=DnsuseResolve=false
+BOOL=DnsuseDetailsLog=true
+INT=Dnsmultiple=10
+INT=DnstimeOut=10
+STRING=DnsrootCache=named.ca
+BOOL=DnsuseRD=true
+STRING=DnssoaMail=postmaster
+INT=DnssoaSerial=1
+INT=DnssoaRefresh=3600
+INT=DnssoaRetry=300
+INT=DnssoaExpire=360000
+INT=DnssoaMinimum=3600
+RADIO=DnsenableAcl=0
+STRING=DnsaclName=
+STRING=DnsaclAddress=
+STRING=DnsDomainname=
 BOOL=FtpuseServer=true
 LIST=FtpprotocolKind=0
 INT=Ftpport=21
