--- a/BJD/bin/Option.ini
+++ b/BJD/bin/Option.ini
@@ -14,8 +14,7 @@ BOOL=BasicuseDetailsLog=true
 INT=Basicmultiple=50
 INT=BasictimeOut=30
 RADIO=BasicenableAcl=0
-STRING=BasicaclName=
-STRING=BasicaclAddress=
+DAT=Basicacl=
 LIST=LognormalLogKind=2
 LIST=LogsecureLogKind=2
 FOLDER=LogsaveDirectory=C:\dev
@@ -24,8 +23,9 @@ BOOL=LoguseLogClear=false
 INT=LogsaveDays=31
 INT=LoglinesMax=3000
 INT=LoglinesDelete=1000
+FONT=Logfont=
 RADIO=LogisDisplay=1
-STRING=LogCharacter=
+DAT=LoglimitString=
 BOOL=LoguseLimitString=false
 BOOL=DnsuseServer=true
 LIST=DnsprotocolKind=1
@@ -44,17 +44,10 @@ INT=DnssoaRetry=300
 INT=DnssoaExpire=2400
 INT=DnssoaMinimum=1200
 RADIO=DnsenableAcl=1
-STRING=DnsaclName=
-STRING=DnsaclAddress=
-STRING=DnsDomainname=
+DAT=Dnsacl=
 DAT=DnsDomaindomainList=	aaa.com
-LIST=Resource-aaa.comtype=0
-STRING=Resource-aaa.comname=
-STRING=Resource-aaa.comalias=
-STRING=Resource-aaa.comaddress=
-INT=Resource-aaa.compriority=10
 DAT=Resource-aaa.comresourceList=	0	www		192.168.0.10	0	1	ns		192.168.0.1	0	0	ws0		192.168.0.1	0	4	www		fe80::3882:6dac:af18:cba6	0	2	smtp		192.168.0.2	15	3	www	www2		0
-BOOL=FtpuseServer=false
+BOOL=FtpuseServer=true
 LIST=FtpprotocolKind=0
 INT=Ftpport=21
 BINDADDR=FtpbindAddress2=V4ONLY,INADDR_ANY,IN6ADDR_ANY_INIT
@@ -65,15 +58,10 @@ INT=FtptimeOut=60
 STRING=FtpbannerMessage=FTP ( $p Version $v ) ready
 BOOL=FtpuseSyst=false
 INT=FtpreservationTime=5000
-FOLDER=FtpfromFolder=
-FOLDER=FtptoFolder=
-LIST=FtpaccessControl=0
-FOLDER=FtphomeDirectory=
-STRING=FtpuserName=
-HIDE_STRING=Ftppassword=60392a0d922b9077
+DAT=FtpmountList=
+DAT=Ftpuser=
 RADIO=FtpenableAcl=0
-STRING=FtpaclName=
-STRING=FtpaclAddress=
+DAT=Ftpacl=
 BOOL=SampleuseServer=false
 LIST=SampleprotocolKind=0
 INT=Sampleport=9999
@@ -84,5 +72,4 @@ INT=Samplemultiple=10
 INT=SampletimeOut=30
 STRING=SamplesampleText=Sample Server
 RADIO=SampleenableAcl=0
-STRING=SampleaclName=
-STRING=SampleaclAddress=
+DAT=Sampleacl=
