--- a/BJD/bin/Option.ini
+++ b/BJD/bin/Option.ini
@@ -14,39 +14,19 @@ BOOL=BasicuseDetailsLog=true
 INT=Basicmultiple=50
 INT=BasictimeOut=30
 RADIO=BasicenableAcl=0
-DAT=Basicacl=
+STRING=BasicaclName=
+STRING=BasicaclAddress=
 LIST=LognormalLogKind=2
 LIST=LogsecureLogKind=2
-FOLDER=LogsaveDirectory=C:\dev
+FOLDER=LogsaveDirectory=
 BOOL=LoguseLogFile=true
 BOOL=LoguseLogClear=false
 INT=LogsaveDays=31
 INT=LoglinesMax=3000
 INT=LoglinesDelete=1000
-FONT=Logfont=
 RADIO=LogisDisplay=1
-DAT=LoglimitString=
+STRING=LogCharacter=
 BOOL=LoguseLimitString=false
-BOOL=DnsuseServer=true
-LIST=DnsprotocolKind=1
-INT=Dnsport=53
-BINDADDR=DnsbindAddress2=V4ONLY,INADDR_ANY,IN6ADDR_ANY_INIT
-BOOL=DnsuseResolve=false
-BOOL=DnsuseDetailsLog=true
-INT=Dnsmultiple=10
-INT=DnstimeOut=10
-STRING=DnsrootCache=named.ca
-BOOL=DnsuseRD=true
-STRING=DnssoaMail=postmaster
-INT=DnssoaSerial=1
-INT=DnssoaRefresh=3600
-INT=DnssoaRetry=300
-INT=DnssoaExpire=2400
-INT=DnssoaMinimum=1200
-RADIO=DnsenableAcl=1
-DAT=Dnsacl=
-DAT=DnsDomaindomainList=	aaa.com
-DAT=Resource-aaa.comresourceList=	0	www		192.168.0.10	0	1	ns		192.168.0.1	0	0	ws0		192.168.0.1	0	4	www		fe80::3882:6dac:af18:cba6	0	2	smtp		192.168.0.2	15	3	www	www2		0
 BOOL=FtpuseServer=true
 LIST=FtpprotocolKind=0
 INT=Ftpport=21
@@ -55,13 +35,19 @@ BOOL=FtpuseResolve=false
 BOOL=FtpuseDetailsLog=true
 INT=Ftpmultiple=10
 INT=FtptimeOut=60
-STRING=FtpbannerMessage=FTP ( $p Version $v ) ready
-BOOL=FtpuseSyst=false
-INT=FtpreservationTime=5000
-DAT=FtpmountList=
-DAT=Ftpuser=
-RADIO=FtpenableAcl=0
-DAT=Ftpacl=
+STRING=FtpbannerMessage=FTP ( $p Version TEST ) ready
+BOOL=FtpuseSyst=true
+INT=FtpreservationTime=1
+FOLDER=FtpfromFolder=
+FOLDER=FtptoFolder=
+LIST=FtpaccessControl=0
+FOLDER=FtphomeDirectory=
+STRING=FtpuserName=
+HIDE_STRING=Ftppassword=60392a0d922b9077
+DAT=Ftpuser=	0	C:\dev\bjd6\work\FtpTestDir	user1	91ad2bfdda0b408f	2	C:\dev\bjd6\work\FtpTestDir	user2	b867684066caf9dc	1	C:\dev\bjd6\work\FtpTestDir	user3	4911d0d49c8911ed	0	C:\dev\bjd6\work\FtpTestDir	Anonymous	529bc0b2695c861e
+RADIO=FtpenableAcl=1
+STRING=FtpaclName=
+STRING=FtpaclAddress=
 BOOL=SampleuseServer=false
 LIST=SampleprotocolKind=0
 INT=Sampleport=9999
@@ -72,4 +58,5 @@ INT=Samplemultiple=10
 INT=SampletimeOut=30
 STRING=SamplesampleText=Sample Server
 RADIO=SampleenableAcl=0
-DAT=Sampleacl=
+STRING=SampleaclName=
+STRING=SampleaclAddress=
