--- a/BJD/bin/Option.ini
+++ b/BJD/bin/Option.ini
@@ -14,7 +14,8 @@ BOOL=BasicuseDetailsLog=true
 INT=Basicmultiple=50
 INT=BasictimeOut=30
 RADIO=BasicenableAcl=0
-DAT=Basicacl=
+STRING=BasicaclName=
+STRING=BasicaclAddress=
 LIST=LognormalLogKind=2
 LIST=LogsecureLogKind=2
 FOLDER=LogsaveDirectory=
@@ -23,29 +24,9 @@ BOOL=LoguseLogClear=false
 INT=LogsaveDays=31
 INT=LoglinesMax=3000
 INT=LoglinesDelete=1000
-FONT=Logfont=
 RADIO=LogisDisplay=1
-DAT=LoglimitString=
+STRING=LogCharacter=
 BOOL=LoguseLimitString=false
-BOOL=DnsuseServer=false
-LIST=DnsprotocolKind=1
-INT=Dnsport=53
-BINDADDR=DnsbindAddress2=V4ONLY,INADDR_ANY,IN6ADDR_ANY_INIT
-BOOL=DnsuseResolve=false
-BOOL=DnsuseDetailsLog=true
-INT=Dnsmultiple=10
-INT=DnstimeOut=10
-STRING=DnsrootCache=named.ca
-BOOL=DnsuseRD=true
-STRING=DnssoaMail=postmaster
-INT=DnssoaSerial=1
-INT=DnssoaRefresh=3600
-INT=DnssoaRetry=300
-INT=DnssoaExpire=360000
-INT=DnssoaMinimum=3600
-RADIO=DnsenableAcl=0
-DAT=Dnsacl=
-DAT=DnsDomaindomainList=
 BOOL=FtpuseServer=true
 LIST=FtpprotocolKind=0
 INT=Ftpport=21
@@ -57,10 +38,16 @@ INT=FtptimeOut=60
 STRING=FtpbannerMessage=FTP ( $p Version TEST ) ready
 BOOL=FtpuseSyst=true
 INT=FtpreservationTime=1
-DAT=FtpmountList=
+FOLDER=FtpfromFolder=
+FOLDER=FtptoFolder=
+LIST=FtpaccessControl=0
+FOLDER=FtphomeDirectory=
+STRING=FtpuserName=
+HIDE_STRING=Ftppassword=60392a0d922b9077
 DAT=Ftpuser=	0	C:\dev\bjd6\work\FtpTestDir	user1	91ad2bfdda0b408f	2	C:\dev\bjd6\work\FtpTestDir	user2	b867684066caf9dc	1	C:\dev\bjd6\work\FtpTestDir	user3	4911d0d49c8911ed	0	C:\dev\bjd6\work\FtpTestDir	Anonymous	529bc0b2695c861e
 RADIO=FtpenableAcl=1
-DAT=Ftpacl=
+STRING=FtpaclName=
+STRING=FtpaclAddress=
 BOOL=SampleuseServer=false
 LIST=SampleprotocolKind=0
 INT=Sampleport=9999
@@ -71,4 +58,5 @@ INT=Samplemultiple=10
 INT=SampletimeOut=30
 STRING=SamplesampleText=Sample Server
 RADIO=SampleenableAcl=0
-DAT=Sampleacl=
+STRING=SampleaclName=
+STRING=SampleaclAddress=
