--- a/BJD/bin/Option.ini
+++ b/BJD/bin/Option.ini
@@ -5,7 +5,7 @@ BOOL=BasicuseAdminPassword=false
 HIDE_STRING=Basicpassword=60392a0d922b9077
 STRING=BasicserverName=
 BOOL=BasiceditBrowse=false
-LIST=Basiclang=0
+LIST=Basiclang=1
 LIST=BasicprotocolKind=0
 INT=Basicport=80
 BINDADDR=BasicbindAddress2=V4ONLY,INADDR_ANY,IN6ADDR_ANY_INIT
@@ -17,7 +17,7 @@ RADIO=BasicenableAcl=0
 DAT=Basicacl=
 LIST=LognormalLogKind=2
 LIST=LogsecureLogKind=2
-FOLDER=LogsaveDirectory=
+FOLDER=LogsaveDirectory=C:\dev
 BOOL=LoguseLogFile=true
 BOOL=LoguseLogClear=false
 INT=LogsaveDays=31
@@ -41,12 +41,12 @@ STRING=DnssoaMail=postmaster
 INT=DnssoaSerial=1
 INT=DnssoaRefresh=3600
 INT=DnssoaRetry=300
-INT=DnssoaExpire=0
-INT=DnssoaMinimum=3600
+INT=DnssoaExpire=2400
+INT=DnssoaMinimum=1200
 RADIO=DnsenableAcl=1
 DAT=Dnsacl=
 DAT=DnsDomaindomainList=	aaa.com
-DAT=Resource-aaa.comresourceList=	0	www		1.1.1.1	0
+DAT=Resource-aaa.comresourceList=	0	www		192.168.0.10	0	1	ns		192.168.0.1	0	0	ws0		192.168.0.1	0	4	www		fe80::3882:6dac:af18:cba6	0	2	smtp		192.168.0.2	15	3	www	www2		0
 BOOL=FtpuseServer=true
 LIST=FtpprotocolKind=0
 INT=Ftpport=21
@@ -55,11 +55,11 @@ BOOL=FtpuseResolve=false
 BOOL=FtpuseDetailsLog=true
 INT=Ftpmultiple=10
 INT=FtptimeOut=60
-STRING=FtpbannerMessage=FTP ( $p Version TEST ) ready
-BOOL=FtpuseSyst=true
-INT=FtpreservationTime=1
+STRING=FtpbannerMessage=FTP ( $p Version $v ) ready
+BOOL=FtpuseSyst=false
+INT=FtpreservationTime=5000
 DAT=FtpmountList=
-DAT=Ftpuser=	0	C:\dev\bjd6\work\FtpTestDir	user1	91ad2bfdda0b408f	2	C:\dev\bjd6\work\FtpTestDir	user2	b867684066caf9dc	1	C:\dev\bjd6\work\FtpTestDir	user3	4911d0d49c8911ed	0	C:\dev\bjd6\work\FtpTestDir	Anonymous	529bc0b2695c861e
+DAT=Ftpuser=	0	C:\tmp2	1	b46a8f7cb918c970
 RADIO=FtpenableAcl=1
 DAT=Ftpacl=
 BOOL=SampleuseServer=false
