--- a/BJD/bin/BJD.ini
+++ b/BJD/bin/BJD.ini
@@ -1,12 +1,16 @@
-listViewLog_col-001=100
-listViewLog_col-002=100
+listViewLog_col-001=53
+listViewLog_col-002=40
 listViewLog_col-000=100
-タイトル_width=1107
-タイトル_hight=473
-タイトル_top=202
-タイトル_left=178
-listViewLog_col-007=283
+タイトル_width=1161
+タイトル_hight=400
+BlackJumboDog_hight=400
+listViewLog_col-007=374
 listViewLog_col-005=100
-listViewLog_col-006=289
-listViewLog_col-003=100
+listViewLog_col-006=100
+listViewLog_col-003=64
 listViewLog_col-004=100
+BlackJumboDog_left=110
+BlackJumboDog_width=1161
+タイトル_top=105
+BlackJumboDog_top=105
+タイトル_left=110
