--- a/BJD/bin/BJD.ini
+++ b/BJD/bin/BJD.ini
@@ -1,16 +1,12 @@
-listViewLog_col-001=53
-listViewLog_col-002=40
+listViewLog_col-001=100
+BlackJumboDog_left=104
+listViewLog_col-002=100
 listViewLog_col-000=100
-タイトル_width=1161
-タイトル_hight=400
+BlackJumboDog_width=800
 BlackJumboDog_hight=400
-listViewLog_col-007=374
+BlackJumboDog_top=114
+listViewLog_col-007=100
 listViewLog_col-005=100
 listViewLog_col-006=100
-listViewLog_col-003=64
+listViewLog_col-003=100
 listViewLog_col-004=100
-BlackJumboDog_left=110
-BlackJumboDog_width=1161
-タイトル_top=105
-BlackJumboDog_top=105
-タイトル_left=110
